# fastapi-resources

./: .gitignore  EXAMPLE.md  INVARIANTS.md  archive.py  deleteme.py  future.md  generics.py  pyproject.toml  roadmap.md  sqlmodel-old.py  test.py
example/: test.py
fastapi_resources/: __init__.py  domain.py  message_bus.py  ports.py  unit_of_work.py
fastapi_resources/handlers/: __init__.py
fastapi_resources/repositories/: __init__.py
fastapi_resources/resources/: __init__.py  base_resource.py  sqlmodel.py  types.py
fastapi_resources/resources/sqlalchemy/: base.py  mixins.py  paginators.py  resources.py  types.py
fastapi_resources/resources/sqlmodel/: base.py  mixins.py  paginators.py  resources.py  types.py
fastapi_resources/routers/: __init__.py  base_router.py  decorators.py  json_api_router.py
fastapi_resources/routers/json_api_router/: __init__.py  json_api_router.py  types.py
fastapi_rest_framework/: routers.py  types.py
fastapi_rest_framework/resources/: __init__.py  base_resource.py  sqlmodel.py  types.py
fastapi_rest_framework/routers/: base_router.py  json_api_router.py
tests/: conftest.py  in_memory_resource.py  test_build_commands.py  test_handlers.py  test_message_bus.py  test_ports.py  test_repositories.py  test_unit_of_work.py  utils.py
tests/resources/: planet.py  sqlalchemy_base.py  sqlalchemy_models.py  sqlmodel_models.py  test_sqlalchemy.py  test_sqlmodel.py
tests/routers/: in_memory_resource.py  models.py  test_base_router.py  test_json_api_router.py  test_json_api_router_with_meta.py
