[tool.poetry]
name = "fastapi-resources"
version = "0.2.18"
description = ""
authors = ["Ben Davis <ben@bencdavis.com>"]
packages = [
    { include = "fastapi_resources" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
sqlmodel = "^0.0.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"
pytest-clarity = "^1.0.1"
pytest-watcher = "^0.2.1"
debugpy = "^1.6.2"

[tool.poetry.group.dev.dependencies]
dirty-equals = "^0.5.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
