[tool.poetry]
name = "fastapi-resources"
version = "0.5.2"
description = ""
authors = ["Ben Davis <ben@bencdavis.com>"]
packages = [
    { include = "fastapi_resources" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
pytest-clarity = "^1.0.1"
pytest-watcher = "^0.2.1"
debugpy = "^1.6.2"

[tool.poetry.group.dev.dependencies]
dirty-equals = "^0.5.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
